<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="35dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="37dp"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="1.5dp">

            <TextView
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/phone_email"
                android:textColor="@color/dark_blue"
                android:textSize="16dp" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="19dp"
            app:cardCornerRadius="37dp"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="1.5dp">

            <TextView
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/dark_blue"
                android:textSize="16dp" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/card_login"
            app:cardBackgroundColor="@color/dark_blue"
            android:layout_marginTop="19dp"
            app:cardCornerRadius="37dp"
            app:strokeColor="@color/dark_blue"
            app:strokeWidth="1.5dp">

            <TextView
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in_using_google_option"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="19dp"
            android:text="@string/continue_as_a_guest_be_able_to_see_o_er_events_brands_locations"
            android:textColor="@color/black"
            android:textSize="14dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>