<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:text="@string/my_passes_add_ons"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:text="@string/scan_card"
                android:textColor="@color/white"
                android:textSize="34dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="239dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/dark_blue"
                app:cardCornerRadius="27dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="1.5dp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_scan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="37dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="1.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/look_up_with_phone"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="37dp"
                app:cardBackgroundColor="@color/blue"
                app:strokeColor="@color/white"
                app:strokeWidth="1.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="Enter number manually"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_blue">

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_centerInParent="true"
            android:src="@drawable/white_round_big" />

    </RelativeLayout>
</RelativeLayout>