<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/rocket_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/manual_mode"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/home_person" />
            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="37dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="1.5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/type_card_barcode_here"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/card_scan"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="37dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="1.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/scan_card"
                    android:textColor="@color/dark_blue"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="37dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="1.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/look_up_with_phone"
                    android:textColor="@color/dark_blue"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/dark_blue"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp">
                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="38dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/apple_wallet" />
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_gravity="center_vertical"
                           android:gravity="center_vertical"
                           android:layout_height="match_parent"
                           android:orientation="vertical">
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:fontFamily="@font/montserrat_regular"
                               android:text="Add to"
                               android:textColor="@color/white"
                               android:textSize="13dp" />
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:fontFamily="@font/montserrat_semi_bold"
                               android:text="Apple Wallet"
                               android:textColor="@color/white"
                               android:textSize="13dp" />
                       </LinearLayout>



                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginStart="1dp"
                    app:cardBackgroundColor="@color/dark_blue"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp">
                        <ImageView
                            android:layout_width="43dp"
                            android:layout_height="38dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/google_wallet" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="Add to"
                                android:textColor="@color/white"
                                android:textSize="13dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="Google Wallet"
                                android:textColor="@color/white"
                                android:textSize="13dp" />
                        </LinearLayout>



                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_ui" />
    </RelativeLayout>
</RelativeLayout>