<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/rocket_violet" />
<LinearLayout
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="WELCOME TO"
        android:textColor="@color/light_blue"
        android:textSize="12dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="WONDERZONE AL KHIRAN"
        android:textColor="@color/light_blue"
       />
</LinearLayout>
                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/home_person" />
            </RelativeLayout>






            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_select_word"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/select_your_world"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/home_slide"
                    android:layout_width="134dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="30dp"
                android:background="@color/violet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/transaction_history"
                android:textAlignment="center"
                android:textColor="@color/violet"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="7dp"
                android:background="@color/violet" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Event"
                android:textAlignment="center"
                android:textColor="@color/violet"
                android:textSize="16dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="307dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="307dp"
                    android:layout_marginTop="34dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/details_bg_dummy" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/card_details"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="31dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="View details"
                        android:textColor="@color/blue"
                        android:textSize="14dp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/more_information"
                android:textColor="@color/violet"
                android:textSize="16dp" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="279dp"
                android:layout_gravity="center"
                android:layout_height="44dp"
                android:layout_marginTop="21dp"
                app:cardBackgroundColor="#b6e2de"
                app:cardCornerRadius="41dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Park Policies"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="279dp"
                android:layout_gravity="center"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                app:cardBackgroundColor="#b6e2de"
                app:cardCornerRadius="41dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="FAQ"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_ui" />
    </RelativeLayout>
</RelativeLayout>